[package]
name = "tradesession"
version = "0.1.1"
edition = "2024"

[features]
# default = ["with-jiff"]
default = ["with-chrono"]
with-chrono = ["chrono"]
with-jiff = ["jiff"]

# 由于缺省是chrono,别的项目引用将这个repo时,在Cargo.toml [dependencies],
# 如果使用jiff,则应该添加 "default-features = false"

# 命令行编译本项目时
# cargo build --features "with-jiff"   --no-default-features
# cargo build --features "with-chrono"
# 切换的过程中，应该cargo clean

[dependencies]
anyhow = "*"
csv = "*"
chrono = { version = "*", features = ["serde"], optional = true }
jiff = { version = "*", features = ["serde"], optional = true }
encoding = "*"
encoding_rs_io = "*"
serde_json = "*"
