[package]
name = "tradesessionpy"
version = "0.1.0"
edition = "2024"
authors = ["Shawn Liu <shawn666.liu@hotmail.com>"]
description = "TradeSession,python封装"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tradesessionpy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
tradesession = { version = "*", path = "../tradesession-rs" }
