[package]
name = "tradesessionpy"
version = "0.1.3"
edition = "2024"
authors = ["Shawn Liu <shawn666.liu@hotmail.com>"]
description = "TradeSession,python封装"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tradesessionpy"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "*"
chrono = "^0.4"
tradesession = { version = "*", path = "../tradesession-rs", default-features = false, features = [
    "with-chrono",
] }
# pyo3的版本受到pyo3-stub-gen的限制
pyo3 = { version = "0.25.1", features = ["macros", "chrono"] }
pyo3-stub-gen = { version = "0.10.0" }
